sites/website/src/docs/3.x/api/fast-element/declarative/fast-element.elementstyles.md
---
id: "fast-element.elementstyles"
title: "ElementStyles class"
layout: 3x-api
eleventyNavigation:
  key: "declarative.jsapi3xfast-element.elementstyles"
  parent: "@microsoft/fast-element/declarative.js3x"
  title: "ElementStyles class"
navigationOptions:
  activeKey: "declarative.jsapi3xfast-element.elementstyles"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[@microsoft/fast-element/declarative.js](../fast-element/index.html) &gt; [ElementStyles](../fast-element.elementstyles/index.html)

## ElementStyles class

Represents styles that can be applied to a custom element.

**Signature:**

```typescript
export declare class ElementStyles
```

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(styles)](../fast-element.elementstyles._constructor_/)


</td><td>


</td><td>

Creates an instance of ElementStyles.


</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[strategy](../fast-element.elementstyles.strategy/)


</td><td>

`readonly`


</td><td>

[StyleStrategy](../fast-element.stylestrategy/)


</td><td>

Gets the StyleStrategy associated with these element styles.


</td></tr>
<tr><td>

[styleNonce](../fast-element.elementstyles.stylenonce/)


</td><td>

`static`


</td><td>

string \| null


</td><td>

The nonce to apply to style elements created when styles are applied with a style element based strategy. Set this to the nonce of the page's Content Security Policy to allow the styles under a strict `style-src` that does not include `'unsafe-inline'`<!-- -->. Styles applied with adopted style sheets are not subject to `style-src` and are unaffected.


</td></tr>
<tr><td>

[styles](../fast-element.elementstyles.styles/)


</td><td>

`readonly`


</td><td>

ReadonlyArray&lt;[ComposableStyles](../fast-element.composablestyles/)<!-- -->&gt;


</td><td>


</td></tr>
<tr><td>

[supportsAdoptedStyleSheets](../fast-element.elementstyles.supportsadoptedstylesheets/)


</td><td>

`static`

`readonly`


</td><td>

boolean


</td><td>

Indicates whether the DOM supports the adoptedStyleSheets feature.


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[normalize(styles)](../fast-element.elementstyles.normalize/)


</td><td>

`static`


</td><td>

Normalizes a set of composable style options.


</td></tr>
<tr><td>

[setDefaultStrategy(Strategy)](../fast-element.elementstyles.setdefaultstrategy/)


</td><td>

`static`


</td><td>

Sets the default strategy type to use when creating style strategies.


</td></tr>
<tr><td>

[withStrategy(Strategy)](../fast-element.elementstyles.withstrategy/)


</td><td>


</td><td>

Sets the strategy that handles adding/removing these styles for an element.


</td></tr>
</tbody></table>
